--- a/index.html
+++ b/index.html
@@ -178,6 +178,26 @@
 
 		gtag('config', 'UA-52095165-1');
 	</script>
+	<script
+	src="https://code.jquery.com/jquery-3.3.1.min.js"
+ 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
+	<script>
+		$(function() {
+			$('a[href*="#"]:not([href="#"])').click(function() {
+				if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+					var target = $(this.hash);
+					target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+					if (target.length) {
+						$('html, body').animate({
+							scrollTop: target.offset().top - 0 
+						}, 1000);
+						return false;
+					}
+				}
+			});
+		});
+	</script>
 </head>
 <body>
 	<div id="main" class="section">
@@ -382,12 +402,12 @@
 
 				<ul>
 					<li>
-						Lead Developer<br />
-						<a href="http://proveniotechnology.com" target="_blank">Provenio Technology</a>
+						Art Director / Lead Developer<br />
+						<a href="http://proveniotechnology.com" target="_blank">Provenio Website</a>
 					</li>
 					<li>
-						Art Director<br />
-						<a href="http://provenio.superlux.com" target="_blank">Provenio Brand</a>
+						Art Director / Lead Developer<br />
+						<a href="http://provenio.superlux.com" target="_blank">Provenio Refresh</a>
 					</li>
 				</ul>
 			</div>
